--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-output_got.csv
+# Exclude the project notebook from the pushed repo
+*.ipynb
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
